--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tic_Tak_Toe</title>
     <link rel="stylesheet" href="styel/style.css">
+    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
 </head>
 
 <body>
@@ -13,15 +14,44 @@
     <h1>Tik Tak Toe</h1>
 
     <div class="game">
-        <div class="block">1</div>
-        <div class="block">2</div>
-        <div class="block">3</div>
-        <div class="block">4</div>
-        <div class="block">5</div>
-        <div class="block">6</div>
-        <div class="block">7</div>
-        <div class="block">8</div>
-        <div class="block">9</div>
+
+        <div class="block block-1" onclick="show('block-1')">
+            <i class="fas fa-times hide"></i>
+            <i class="far fa-circle hide"></i>
+        </div>
+        <div class="block block-2" onclick="show('block-2')">
+            <i class="fas fa-times hide"></i>
+            <i class="far fa-circle hide"></i>
+        </div>
+        <div class="block block-3" onclick="show('block-3')">
+            <i class="fas fa-times hide"></i>
+            <i class="far fa-circle hide"></i>
+        </div>
+        <div class="block block-4" onclick="show('block-4')">
+            <i class="fas fa-times hide"></i>
+            <i class="far fa-circle hide"></i>
+        </div>
+        <div class="block block-5" onclick="show('block-5')">
+            <i class="fas fa-times hide"></i>
+            <i class="far fa-circle hide"></i>
+        </div>
+        <div class="block block-6" onclick="show('block-6')">
+            <i class="fas fa-times hide"></i>
+            <i class="far fa-circle hide"></i>
+        </div>
+        <div class="block block-7" onclick="show('block-7')">
+            <i class="fas fa-times hide"></i>
+            <i class="far fa-circle hide"></i>
+        </div>
+        <div class="block block-8" onclick="show('block-8')">
+            <i class="fas fa-times hide"></i>
+            <i class="far fa-circle hide"></i>
+        </div>
+        <div class="block block-9" onclick="show('block-9')">
+            <i class="fas fa-times hide"></i>
+            <i class="far fa-circle hide"></i>
+        </div>
+
     </div>
 
 
